--- a/src/index.sass
+++ b/src/index.sass
@@ -1,20 +1,5 @@
 /**
  * Created by alejandrorioscalera
- * On 13/12/17
- *
- * -- SOCIAL NETWORKS --
- *
- * GitHub: https://github.com/clonalejandro or @clonalejandro
- * Website: https://clonalejandro.me/
- * Twitter: https://twitter.com/clonalejandro11/ or @clonalejandro11
- * Keybase: https://keybase.io/clonalejandro/
- *
- * -- LICENSE --
- *
- * All rights reserved for clonalejandro ©malextrap 2017 / 2018
- */
-/**
- * Created by alejandrorioscalera
  * On 12/12/17
  *
  * -- SOCIAL NETWORKS --
@@ -83,9 +68,9 @@ select
   position: relative
   display: inline-block
   margin: .5em
-  padding: 0.5em 2em 0.5em 2.25em
+  padding: 0.5em 1.5em 0.5em 1.25em
   border-radius: 2em
-  background: $primary
+  background: $dark
   -webkit-appearance: button
   color: $pure_white
   text-decoration: none
